[gd_scene load_steps=19 format=1]

[ext_resource path="res://microwave/microwave.gd" type="Script" id=1]
[ext_resource path="res://MicrowaveWhite.png" type="Texture" id=2]
[ext_resource path="res://MicrowaveBG.png" type="Texture" id=3]
[ext_resource path="res://main_menu/button_popcorn.png" type="Texture" id=4]
[ext_resource path="res://main_menu/button_popcorn_hover.png" type="Texture" id=5]
[ext_resource path="res://main_menu/16216355_1516533378375631_1536419021_n.png" type="Texture" id=6]
[ext_resource path="res://main_menu/button_credits_hover.png" type="Texture" id=7]
[ext_resource path="res://main_menu/16237889_1516533375042298_286788757_n.png" type="Texture" id=8]
[ext_resource path="res://main_menu/button_quit_hover.png" type="Texture" id=9]
[ext_resource path="res://door.png" type="Texture" id=10]
[ext_resource path="res://title.png" type="Texture" id=11]
[ext_resource path="res://stage/blink.tres" type="Animation" id=12]
[ext_resource path="res://woohoo.png" type="Texture" id=13]
[ext_resource path="res://win.tres" type="Animation" id=14]
[ext_resource path="res://stage/main_sampleplayer.tres" type="SampleLibrary" id=15]
[ext_resource path="res://Pipo_InterludoBeta.smp" type="Sample" id=16]
[ext_resource path="res://credits.jpg" type="Texture" id=17]

[sub_resource type="SampleLibrary" id=1]

samples/pipo = { "db":-15.0, "pitch":1.3, "sample":ExtResource( 16 ) }

[node name="microwave" type="Node"]

script/script = ExtResource( 1 )
level_filepath = "res://microwave/level.tscn"

[node name="gui" type="Node2D" parent="."]

editor/display_folded = true

[node name="MicrowaveWhite" type="Sprite" parent="gui"]

transform/pos = Vector2( 515.057, 298.889 )
transform/scale = Vector2( 1.44301, 1.47651 )
texture = ExtResource( 2 )

[node name="MicrowaveBG" type="Sprite" parent="gui"]

transform/pos = Vector2( 413.919, 296.335 )
transform/scale = Vector2( 4.18166, 4.17486 )
texture = ExtResource( 3 )

[node name="popcorn" type="TextureButton" parent="gui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 846.0
margin/top = 141.0
margin/right = 1004.0
margin/bottom = 177.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/hover = ExtResource( 5 )
params/scale = Vector2( 1.5, 1.2 )

[node name="credits" type="TextureButton" parent="gui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 846.0
margin/top = 190.0
margin/right = 1004.0
margin/bottom = 230.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/hover = ExtResource( 7 )
params/scale = Vector2( 1.5, 1.2 )

[node name="quit" type="TextureButton" parent="gui"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 846.0
margin/top = 238.0
margin/right = 1004.0
margin/bottom = 278.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
textures/hover = ExtResource( 9 )
params/scale = Vector2( 1.5, 1.2 )

[node name="door" type="Sprite" parent="gui"]

transform/pos = Vector2( 412.931, 296.101 )
transform/scale = Vector2( 1.44816, 1.51003 )
texture = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="gui"]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 413.296, 293.169 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 11 )
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="gui/Sprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/blink = ExtResource( 12 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "blink"

[node name="Sprite 2" type="Sprite" parent="gui"]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( 389.375, 299 )
transform/scale = Vector2( 4, 4 )
texture = ExtResource( 13 )
hframes = 3
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="gui/Sprite 2"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/win = ExtResource( 14 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="SamplePlayer" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = ExtResource( 15 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="Music" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 1 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="credits" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 416.433, 298.982 )
transform/scale = Vector2( 1.3757, 1.3757 )
texture = ExtResource( 17 )

[connection signal="pressed" from="gui/popcorn" to="." method="on_start"]

[connection signal="pressed" from="gui/credits" to="." method="on_credits"]

[connection signal="pressed" from="gui/quit" to="." method="on_quit"]


